changelog: 1) arbitrary positioning of the feeds on search has been corrected 2) changed the styles of the search bars in both add feeds page and my feeds page 3) introduced a feedback button in the footer of the add feeds page 4) removed the scrollbar chutiyapa on loading 5) on clicking the texts other than the given categories, now nothing happens.(corrected)
things to be done:
1) unsub thing on the my feeds page has some load regarding the feedslist alignment
2)introduce a cover page so as to cover up the loading time..
3)if th user has subscribed to atleast 1 feed, then on relaunching, we need to goto the my feeds page diretly
4) certain users miss the description in the add feeds page.. they dont see em so they get confused wt to do.

--- a/css/default.css
+++ b/css/default.css
@@ -56,8 +56,7 @@ body {
 
 /* Scrollable area */
 .scrollable {
-    overflow-x: hidden;
- 	overflow-y: auto;
+    overflow: hidden;
 	width:830px;
 	height:600px;
 	background:url('../img/bg_center.jpg');
