--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,11 @@ html{
 	font:14px/1.3 'Segoe UI',Arial, sans-serif;
 	text-shadow:none;
 	height: 600px;
+	overflow:hidden;
 	background:url('../img/bg-body.gif') repeat-y;
+}
+#addfeedsdiv ul{
+	list-style:none;
 }
 
 #sidebar{
@@ -53,52 +57,58 @@ a, a:visited {
 #searchbox {
 	padding: 90px 0 0 20px;
 	text-shadow:none;
+	-webkit-box-shadow:inset 0px 0px 0px #ccc;
+	border: 1px solid #;
 }
 
 #searchbox input[type="text"]{
-font-size: 12px;
-color: #000;
-width:300px;
-padding: 6px;
-outline:none;
-border-radius:20px 0 0 20px; 
--moz-box-shadow:inset 2px 2px 5px #ccc;
--webkit-box-shadow:inset 0px 0px 0px #ccc;
-border: 1px solid #;
-
+	font-size: 12px;
+	color: #000;
+	width:300px;
+	padding: 6px;
+	outline:none;
+	border-radius:20px 0 0 20px; 
+	-webkit-transition: all 0.7s ease 0s;
+	background:#F0F0F0;
 }
+#searchbox input[type="text"]:focus{
+	background:#fff;
+	-webkit-transition: all 0.7s ease 0s;
+}
+
 #searchbox input[type="submit"]{
-background: url("../img/submit.png") top left no-repeat;
-width: 67px;
-height: 30px;
-border: none;
-color: #fff;
-cursor: pointer;
-border-radius:0 20px 20px 0;
-position:relative;
-left: -5px;
+	background: url("../img/submit.png") top left no-repeat;
+	width: 67px;
+	height: 30px;
+	border: none;
+	color: #fff;
+	cursor: pointer;
+	border-radius:0 20px 20px 0;
+	position:relative;
+	left: -5px;
+	-webkit-transition: all 0.7s ease 0s;
 }
 
 #searchbox input[type="submit"]:hover
 {
- background: url("../img/submit.png") 0 -30px no-repeat;
+	background: url("../img/submit.png") 0 -30px no-repeat;
 }
 
 #searchbox input[type="submit"]:active
 {
- background: url("../img/submit.png") bottom right no-repeat;
+ 	background: url("../img/submit.png") bottom right no-repeat;
 }
 /*----------------------------
 	Addfeeds Menu Bar 
 -----------------------------*/
 
 .filter {
-	margin: 30px 0px 10px;
+	margin: 10px 0px 10px;
 	list-style:none;
 }
 
 .filter a{
-	color: #FFFFFF;
+	color: #FFF;
 	display: inline-block;
 	height: 20px;
 	margin-top: 0px;
@@ -110,7 +120,7 @@ left: -5px;
 .filter a:hover{
 text-decoration:underline;
 }
-.filter ul li.selected a{
+.filter li.selected a{
 	
 	background: url("../img/gbutton.png") no-repeat -2px 1px;	
 	text-decoration:none;
@@ -124,7 +134,7 @@ text-decoration:underline;
 	color:#ddd;
 }
 
-.filter ul {
+.filter {
 	list-style:none;
 }
 
@@ -139,9 +149,13 @@ text-decoration:underline;
 	AddFeeds Content Area
 -----------------------------*/
 
+#descr{
+	margin-top:30px;
+}
+
 .grimg{
 	position:relative;
-	margin-top: 70px;
+	margin-top: 50px;
 }
 .actions p a strong {
   text-shadow: none;
@@ -156,8 +170,8 @@ text-decoration:underline;
 	min-width:600px;
 	text-shadow: 0px 2px 3px #aaa;
 	left: 240px;
+	overflow:hidden;
 	display:block;
-	overflow:auto;
 	margin: 25px auto;
 
 }
@@ -166,18 +180,10 @@ text-decoration:underline;
 	-webkit-box-reflect:below -8px
 	-webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.8, transparent), to(white)); 
 	-webkit-transition: margin 0.25s ease-out;
-    -moz-transition: margin 0.25s ease-out;
-    -o-transition: margin 0.25s ease-out;
-			
 }
 .grimg li img:hover{
 	margin-top: -8px;
-	-webkit-transition: margin  ease-out;
-    -moz-transition: margin 0.25s ease-out;
-    -o-transition: margin 0.25s ease-out;
 	-webkit-transition: margin 0.25s ease-out;
-    -moz-transition: margin 0.25s ease-out;
-    -o-transition: margin 0.25s ease-out;
 }
 #container:after {
   content: "";
@@ -218,7 +224,23 @@ text-decoration:underline;
    font-weight: bold;
    display: none;
  }
- 
+ #feedback{
+	position:relative;
+ 	margin-left:50px;
+	top:20px;
+	color:#000;
+	padding:5px;
+	border-radius:5px;
+	background:url(../img/arrow.png) -10px 0px no-repeat;
+ }
+ #feedback:hover{
+ 	color:#222;
+	background:url('../img/arrow.png') -10px -30px no-repeat;
+ }
+ #feedback:active{
+	 background:url('../img/arrow.png') -10px -60px no-repeat;
+	 
+ }
 /*----------------------------
 	MyFeeds Content Area/////////////////////////////////////////////
 -----------------------------*/
@@ -241,7 +263,7 @@ text-decoration:underline;
 	background:url('../img/footer.png') repeat-x
 }
 .myfeedlist{
-	margin: 0 0 0 65px;
+	margin: 0 0 0 75px;
 	padding: 0 10px 10px 10px;
 	height:470px;
 	list-style:none;
@@ -252,21 +274,15 @@ text-decoration:underline;
 	width:32px;
 	height:32px;
 	float:right;
-	right:-20px;
-	display:block;
+	right:-15px;
 	top:-10px;
 	background:url('../img/unsub.png') no-repeat; 
 	cursor:pointer;
 	display:none; 
 }
-.myfeedlist li{
-/*	height: 40px;
-	width:175px; */
-	float:left; 
-	margin :20px 25px 30px 15px;  	
-}
+
 .feedl
-{	
+{	margin :20px 25px 30px 15px; 
 	text-align:center;
 	border-radius: 3px;
 	width:100px;
@@ -367,40 +383,35 @@ background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, 
 -----------------------------*/
 
 #feedsearch{
-	position:static;
-	float:right;
-	color:#fff;
-	margin-top: 15px;
-	text-shadow: 0 2px 5px #000;	
-}
-	
-#feedsearch input[type="text"]{
-font-size: 12px;
-color: #000;
-width:250px;
-padding: 3px;
-outline:none;
-border-radius:20px; 
--moz-box-shadow:inset 2px 2px 5px #ccc;
--webkit-box-shadow:inset 0px 0px 0px #ccc;
-border: 1px solid #;
-
-}
-#feedsearch input[type="submit"]{
-background: url(../img/search-dark.png) no-repeat;
-width: 15px;
-height: 15px;
-border: none;
-left:-30px;
-cursor: pointer;
-position:relative;
+    position:static;
+    float:right;
+    margin-top: 20px;
+    text-shadow: 0 2px 5px #000;    
+    margin-right:20px;
+    border-radius:10px;
+    outline:none;
+    padding: 3px;
+    width:220px;
+    font-size: 12px;
+    color: #000;
+    text-shadow:none;
+    -webkit-box-shadow:inset 0px 0px 0px #ccc;
+    border: 1px solid #aaa;
+    padding-left:20px;
+    background:#aaa;
+    -webkit-transition: all 0.7s ease 0s;
 }
 
-#feedsearch input[type="submit"]:hover
-{
- background: url(../img/search-white.png) no-repeat;
+#feedsearch:focus{
+    background:#fff;
+    -webkit-transition: all 0.7s ease 0s;
 }
 
+#srchglass{
+	float: right;
+	margin-top: 24px;
+	margin-right: -20px;
+}
 /*///////////////////////////////////
 		FOOTER
 ////////////////////////////////////*/
